--- a/WebAppStep01/appsettings.json
+++ b/WebAppStep01/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=DESKTOP-K78JCQ6\\TUYENNGUYENTU;Database=WebApp;User Id=sa;password=tuyen270798;Trusted_Connection=False;MultipleActiveResultSets=true;"
+    "DevConnection": "Server=DESKTOP-K78JCQ6\\TUYENNGUYENTU;Database=WebApp;Trusted_Connection=False;MultipleActiveResultSets=true;"
   }
 }
